Snapshot a79f7b6488

* Fix non-ASCII activity names (smcv)
* Notify local processes when we change an activity name, so the mesh
  view can update (smcv)
* Fix bug where activities initially had empty title in mesh view (smcv)

Snapshot 25218b4642

* Support invitations and non-public activities (smcv)
* Support mutable name/tags/color/private properties (smcv)

Snapshot 1c58a0be88

* Update LinkLocal plugin's protocol to "local-xmpp"

Snapshot 970ca27db7

* Make buddy-left async (morgs)

Snapshot 8dc589f5b0

* #2214: Gracefully handle blank server field (dcbw)

Snapshot fbc25c93ad

Snapshot bc7fc5f02d

* Cope with arbitrary Unicode in nicknames, bug#2611 (smcv)

Snapshot ce62f752b2

* Text channel creation minor fixes (smcv)
* #2062: Handle trying to register if the server says already registered
  (cassidy)

Snapshot 79251459e5

* Return buddy properties as a byte array, not an array of bytes (dcbw)
* Don't list the owner twice in GetBuddies method (danw)

Snapshot 650c323462

* Don't send None over D-Bus when updating current activity (danw)
* Make locally-originated shared activities disappear when everyone leaves (dcbw)

Snapshot 6c86d827b5

* Set Buddy current-activity property to none if leaving the current activity
* Hook up to owner current activity change signal so current activity changes
  get propagated
* Fix re-appearance of buddies by actually forgetting about the buddy completely
  when a buddy disappears

Snapshot b539f146e9

* Disable avatars. The cache was causing high cpu usage at startup (smcv) 

Snapshot e9c851eb8f

* Reapply (with fix) the patch for Better backoffs with connection
  retries to avoid hogging the CPU (morgs)

Snapshot 6f2584d5eb

* Revert: Better backoffs with connection retries... as it stopped
  the server plugin from connecting (morgs)

Snapshot e26e3c0294

* Better backoffs with connection retries to avoid hogging the CPU (smcv)
* Cope with CMs with no presence interface (smcv)